add_subdirectory(defs)
add_subdirectory(00basis)
add_subdirectory(01manage_mpi)
add_subdirectory(11util)
add_subdirectory(11contract)
add_subdirectory(12spacepar)
add_subdirectory(12parser)
add_subdirectory(12geometry)
add_subdirectory(13psp)

# don't build main yet, until we manage to build all the dirs
#add_subdirectory(main)
