add_subdirectory(defs)
add_subdirectory(00basis)
add_subdirectory(01manage_mpi)
add_subdirectory(11util)
add_subdirectory(11contract)
add_subdirectory(12spacepar)
add_subdirectory(12parser)
add_subdirectory(12geometry)
add_subdirectory(13psp)
add_subdirectory(12ffts)
add_subdirectory(12nlstrain)
add_subdirectory(13nonlocal)
add_subdirectory(13xml)
add_subdirectory(13xc)
add_subdirectory(13recipspace)
add_subdirectory(13paw)
add_subdirectory(13io_mpi)
add_subdirectory(13iovars)
add_subdirectory(13ionetcdf)
add_subdirectory(14poisson)
add_subdirectory(14wfs)
add_subdirectory(14wvl_wfs)
add_subdirectory(14iowfdenpot)
add_subdirectory(14occeig)
add_subdirectory(15rsprc)
add_subdirectory(15recursion)
add_subdirectory(15common)
add_subdirectory(15gw)
add_subdirectory(16geomoptim)
add_subdirectory(16response)
add_subdirectory(17suscep)
add_subdirectory(18seqpar)
add_subdirectory(21rdm)
add_subdirectory(21paral_md)
add_subdirectory(21drive)

add_subdirectory(lib01cg)
add_subdirectory(lib01hidempi)
add_subdirectory(lib01fftnew)
add_subdirectory(lib00numeric)

add_subdirectory(main)
