set(SRC
    aprxdr.F90
    atm2fft.F90
    berryphase.F90
    brdene.F90
    bstruct_clean.F90
    bstruct_init.F90
    calc_cs.F90
    calc_efg.F90
    calc_fc.F90
    clnup1.F90
    clnup2.F90
    conducti_nc.F90
    conducti_paw.F90
    constrf.F90
    dielmt2.F90
    dielmt.F90
    dieltcel.F90
    dsksta.F90
    energy.F90
    etheta.F90
    etotfor.F90
    ewald.F90
    ewald2.F90
    extraprho.F90
    fconv.F90
    filterpot.F90
    findmin.F90
    fixsym.F90
    forces.F90
    forstr.F90
    forstrnps.F90
    fresid.F90
    fresidrsp.F90
    gipaw_j_dia_bare.F90
    hartre1.F90
    initberry.F90
    initmv.F90
    initro.F90
    ionion_realspace.F90
    jellium.F90
    jvec_to_B.F90
    linear_optics_paw.F90
    linemin.F90
    linopt.F90
    make_efg_el.F90
    make_efg_ion.F90
    make_fc_el.F90
    memkss.F90
    mklocl.F90
    mklocl_realspace.F90
    mklocl_recipspace.F90
    mklocl_wavelets.F90
    mkresi.F90
    mkrho.F90
    mksubham.F90
    mlwfovlp.F90
    mlwfovlp_proj.F90
    mlwfovlp_pw.F90
    mlwfovlp_radial.F90
    mlwfovlp_setup.F90
    moddiel.F90
    msig.F90
    newkpt.F90
    newrho.F90
    newvtr.F90
    nlinopt.F90
    nres2vres.F90
    odamix.F90
    prcref.F90
    prcref_PMA.F90
    prteigrs.F90
    prtene.F90
    prtrhomxmn.F90
    prtxf.F90
    prtxvf.F90
    rhophi.F90
    rhotov.F90
    scfcge.F90
    scfeig.F90
    scfopt.F90
    scprqt.F90
    setup_positron.F90
    setup1.F90
    setup2.F90
    setvtr.F90
    smatrix.F90
    spin_current.F90
    stress.F90
    strhar.F90
    sygrad.F90
    symrhg.F90
    testsusmat.F90
    uderiv.F90
    vtorhotf.F90
    waveformat.F90
    wvl_mkrho.F90
    wvl_newvtr.F90
)

include_directories(../defs)
add_library(15common ${SRC})
add_dependencies(15common defs)
