set(SRC
    assemblychi0_sym.F90
    assemblychi0sf.F90
    assemblychi0sfq0.F90
    assemblychi0q0_sym.F90
    bands_classification.F90
    bz1.F90
    calc_coh.F90
    calc_density.F90
    calc_ffm.F90
    calc_rpa_functional.F90
    calc_sig_noppm.F90
    calc_sig_ppm.F90
    calc_sig_ppm_comp.F90
    calc_vHxc_braket.F90
    calc_wf_qp.F90
    ccgradvnl.F90
    ccgradvnl_ylm.F90
    cchi0.F90
    cchi0q0.F90
    cggfft.F90
    cigfft.F90
    clcqpg.F90
    cppm1par.F90
    cppm2par.F90
    cppm3par.F90
    cppm4par.F90
    cqratio.F90
    crystal_methods.F90
    csigme.F90
    cutoff_cylinder.F90
    cutoff_m_elem.F90
    cutoff_sphere.F90
    cutoff_surface.F90
    cvc.F90
    debug_tools.F90
    difvxc.F90
    dosym.F90
    dosymr.F90
    dotproductqrc.F90
    eps1_tc.F90
    fermi.F90
    fft_onewfn.F90
    findggp.F90
    findk.F90
    findnq.F90
    findq.F90
    findqg0.F90
    fkin.F90
    get_bands_sym_GW.F90
    get_ng0sh.F90
    gwcompleteness.F90
    gw_methods.F90
    gw_tools.F90
    hdr_vs_dtset.F90
    identk.F90
    identq.F90
    ioppm.F90
    iosig.F90
    joint_dos.F90
    kramerskronig.F90
    make_epsm1_driver.F90
    m_commutator_vkbr.F90
    outeps.F90
    pawr.F90
    paw_mkrhox.F90
    paw_mkrhox_spl.F90
    paw_rho_tw_g.F90
    paw_symcprj.F90
    paw_tools.F90
    pclock.F90
    ppmodel_methods.F90
    print_pawtab.F90
    print_paw_ij.F90
    print_psps.F90
    q0fit.F90
    rdqps.F90
    respfunc_methods.F90
    rho_tw_g.F90
    rdscr.F90
    setmesh.F90
    setshells.F90
    setup_coulombian.F90
    setup_FFT_rotation.F90
    setup_G_rotation.F90
    setup_kmesh.F90
    setup_qmesh.F90
    setup_little_group.F90
    setup_ppmodel.F90
    setup_sigma.F90
    sizefft.F90
    symmetrize_afm_chi0.F90
    symf12.F90
    solve_Dyson.F90
    spectral.F90
    split_sigc.F90
    testscr.F90
    wf_info.F90
    wrqps.F90
    wrscr.F90
)

include_directories(../defs)
add_library(15gw ${SRC})
add_dependencies(15gw defs)
