set(SRC
    asria9.F90
    asrprs.F90
    atm2fft3.F90
    bec3.F90
    blok8.F90
    cart29.F90
    cart39.F90
    cgwf3.F90
    chkph3.F90
    chneu9.F90
    die3.F90
    dyfnl3.F90
    dyfro3.F90
    dyout3.F90
    dyxc13.F90
    d2kindstr2.F90
    d2sym3.F90
    d3output.F90
    d3sym.F90
    ebp3.F90
    edie3.F90
    eltfrhar3.F90
    eltfrkin3.F90
    eltfrloc3.F90
    eltfrnl3.F90
    eltfrxc3.F90
    eltxccore.F90
    etot3.F90
    ewald3.F90
    ewald4.F90
    eig1fixed.F90
    eig2tot.F90
    gath3.F90
    gaugetransfo.F90
    gbefd3.F90
    getgh1c.F90
    getshell.F90
    gradberry3.F90
    hartrestr.F90
    initberry3.F90
    inprep8.F90
    insy3.F90
    ioddb8.F90
    kpg3.F90
    kpgstr.F90
    mkrho3.F90
    mkvxcstr3.F90
    mkvxcstrgga3.F90
    mkcor3.F90
    newfermie1.F90
    newvtr3.F90
    nlopt.F90
    nselt3.F90
    nstdy3.F90
    nstwf3.F90
    nstwf4.F90
    outbsd.F90
    outgkk.F90
    phfrq3.F90
    polcart.F90
    prtph3.F90
    prtene3.F90
    psddb8.F90
    q0dy3.F90
    qmatrix.F90
    redgr.F90
    resp3dte.F90
    rhofermi3.F90
    rhotov3.F90
    scfcv3.F90
    sydy3.F90
    sygra3.F90
    symdyma.F90
    symph3.F90
    syper3.F90
    sytens.F90
    vloca3.F90
    vlocalstr.F90
    vtorho3.F90
    vtowfk3.F90
    wfkfermi3.F90
    wings3.F90
    wrtloctens.F90
)

include_directories(../defs)
add_library(16response ${SRC})
add_dependencies(16response defs)
